merge branch rmspt back into trunk